feat: 跑通全链路流程

--- a/backend/example.ipynb
+++ b/backend/example.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "admin_pk = \"0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80\"\n",
     "\n",
     "unit_pk1 = \"0x59c6995e998f97a5a0044966f0945389dc9e86dae88c7a8412f4603b6b78690d\"\n",
+    "unit_pk2 = \"0x5de4111afa1a4b94908f83103eb1f1706367c2e68ca870fc3fb9a804cdab365a\"\n",
     "\n",
     "employee_pk1 = \"0x7c852118294e51e653712a81e05800f419141751be58f605c371e15141b007a6\"\n",
     "employee_pk2 = \"0x47e179ec197488593b187f80a00eb0da91f1b9d0b13f8733639f19c30a34926a\"\n",
@@ -18,16 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TaxManagement contract address:  0x0165878A594ca255338adfa4d48449f69242Eb8F\n",
-      "RMBToken contract address:  0x3B02fF1e626Ed7a8fd6eC5299e2C54e1421B626B\n",
-      "TaxToken contract address:  0xBA12646CC07ADBe43F8bD25D83FB628D29C8A762\n"
+      "TaxManagement contract address:  0x5FbDB2315678afecb367f032d93F642f64180aa3\n",
+      "RMBToken contract address:  0xa16E02E87b7454126E5E10d957A927A7F5B5d2be\n",
+      "TaxToken contract address:  0xB7A5bd0345EF1Cc5E66bf61BdeC17D2461fBd968\n"
      ]
     }
    ],
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,16 +263,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Account:  <eth_account.signers.local.LocalAccount object at 0x7f1b33490790>\n",
-      "Event:  AttributeDict({'args': AttributeDict({'unitAddress': '0x70997970C51812dc3A010C7d01b50e0d17dc79C8'}), 'event': 'UnitAdded', 'logIndex': 1, 'transactionIndex': 0, 'transactionHash': HexBytes('0x0e0affb2410861dd4bd501693483138d9a976837652f2a572729f7936b601979'), 'address': '0x0165878A594ca255338adfa4d48449f69242Eb8F', 'blockHash': HexBytes('0x9cd0b1db8f03d561b0be29b79ffd8500269660f2a104fe092ce26f7056866ea8'), 'blockNumber': 30})\n",
-      "unit address: 0x70997970C51812dc3A010C7d01b50e0d17dc79C8\n"
+      "Account:  <eth_account.signers.local.LocalAccount object at 0x7f02326c8280>\n",
+      "Event:  AttributeDict({'args': AttributeDict({'unitAddress': '0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC'}), 'event': 'UnitAdded', 'logIndex': 1, 'transactionIndex': 0, 'transactionHash': HexBytes('0xb362211b33ccb73d8e196ce14624b1a2460b8a75c60c5e4ae5f05049251e8cf2'), 'address': '0x5FbDB2315678afecb367f032d93F642f64180aa3', 'blockHash': HexBytes('0x3a63d7aaa84a91f58f566afdb4a6d2771bb44e71ff71b2d3dbbede26fb9972ec'), 'blockNumber': 2})\n",
+      "unit address: 0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC\n"
      ]
     }
    ],
@@ -340,18 +341,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Account:  <eth_account.signers.local.LocalAccount object at 0x7f1b332f7dc0>\n",
-      "Event:  AttributeDict({'args': AttributeDict({'unitAddress': '0x70997970C51812dc3A010C7d01b50e0d17dc79C8', 'employeeAddress': '0x90F79bf6EB2c4f870365E785982E1f101E93b906', 'monthlySalary': 10000}), 'event': 'EmployeeAdded', 'logIndex': 0, 'transactionIndex': 0, 'transactionHash': HexBytes('0x0d55baaa8c0386147af062e744331cd78c191b02bca61842ffcd4501998a52c1'), 'address': '0x0165878A594ca255338adfa4d48449f69242Eb8F', 'blockHash': HexBytes('0x92cd89d1cbecb5a2d887693db4d0a27a6363d0435cfab1ce23864f947b36797e'), 'blockNumber': 31})\n",
-      "unit address: 0x70997970C51812dc3A010C7d01b50e0d17dc79C8\n",
-      "employee address: 0x90F79bf6EB2c4f870365E785982E1f101E93b906\n",
-      "\n"
+      "Account:  <eth_account.signers.local.LocalAccount object at 0x7f0222e4df90>\n"
      ]
     }
    ],
@@ -519,18 +516,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Account:  0x70997970C51812dc3A010C7d01b50e0d17dc79C8\n",
-      "Event:  AttributeDict({'args': AttributeDict({'unitAddress': '0x70997970C51812dc3A010C7d01b50e0d17dc79C8', 'taxAmount': 745, 'totalTaxDue': 0}), 'event': 'TaxPayment', 'logIndex': 2, 'transactionIndex': 0, 'transactionHash': HexBytes('0x2e024a031a11ebaf82f5ad4148f111cf5c5b33aa5a7906104270e963533a7a94'), 'address': '0x0165878A594ca255338adfa4d48449f69242Eb8F', 'blockHash': HexBytes('0x5c9ad96e6aa7df24b2460c087a36c77da7acf03fa616d3ba673798632aa90dd2'), 'blockNumber': 37})\n",
-      "unit address: 0x70997970C51812dc3A010C7d01b50e0d17dc79C8\n",
+      "Account:  0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC\n",
+      "Event:  AttributeDict({'args': AttributeDict({'unitAddress': '0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC', 'taxAmount': 4370, 'totalTaxDue': 0}), 'event': 'TaxPayment', 'logIndex': 2, 'transactionIndex': 0, 'transactionHash': HexBytes('0x04a8a477ccfc02dd1246b1d84502cd08477af7b2512b5fe83cbee2d596fc77e0'), 'address': '0x5FbDB2315678afecb367f032d93F642f64180aa3', 'blockHash': HexBytes('0xd6313fcf27a09345c1f9e4756129ca7354338a8e9784eaf7138882ff5762ba4d'), 'blockNumber': 11})\n",
+      "unit address: 0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC\n",
       "totalTaxDue: 0\n",
-      "taxAmount: 745\n",
+      "taxAmount: 4370\n",
+      "block: 11\n",
+      "timestamp:  1716524359\n",
       "\n"
      ]
     }
@@ -558,9 +557,11 @@
     "        print(\"unit address:\", event['args']['unitAddress'])\n",
     "        print(\"totalTaxDue:\", event['args']['totalTaxDue'])\n",
     "        print(\"taxAmount:\", event['args']['taxAmount'])\n",
+    "        print(\"block:\", event.blockNumber)\n",
+    "        print(\"timestamp: \", web3.eth.get_block(event.blockNumber).timestamp)\n",
     "        print()\n",
     "\n",
-    "getPays(unit_pk1)"
+    "getPays(unit_pk2)"
    ]
   },
   {
