refactor: 重构后端和前端代码，优化私钥获取逻辑和薪资记录处理

--- a/backend/example.ipynb
+++ b/backend/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -341,14 +341,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Account:  <eth_account.signers.local.LocalAccount object at 0x7f0222e4df90>\n"
+      "Account:  <eth_account.signers.local.LocalAccount object at 0x7fac14cde1d0>\n",
+      "Event:  AttributeDict({'args': AttributeDict({'unitAddress': '0x70997970C51812dc3A010C7d01b50e0d17dc79C8', 'employeeAddress': '0x90F79bf6EB2c4f870365E785982E1f101E93b906', 'monthlySalary': 24000}), 'event': 'EmployeeAdded', 'logIndex': 0, 'transactionIndex': 0, 'transactionHash': HexBytes('0x2fe515479a840a4d86c5dd34c48c860dd3a683078ff482f6ee82b49b3f3e9eb3'), 'address': '0x5FbDB2315678afecb367f032d93F642f64180aa3', 'blockHash': HexBytes('0x53b42d0a5ab9132c17ec3106cbd3af000f30062d9183a7629d43dc736915ec26'), 'blockNumber': 4})\n",
+      "unit address: 0x70997970C51812dc3A010C7d01b50e0d17dc79C8\n",
+      "employee address: 0x90F79bf6EB2c4f870365E785982E1f101E93b906\n",
+      "\n",
+      "Event:  AttributeDict({'args': AttributeDict({'unitAddress': '0x70997970C51812dc3A010C7d01b50e0d17dc79C8', 'employeeAddress': '0x15d34AAf54267DB7D7c367839AAf71A00a2C6A65', 'monthlySalary': 25000}), 'event': 'EmployeeAdded', 'logIndex': 0, 'transactionIndex': 0, 'transactionHash': HexBytes('0xbfbf4b35cdf019ec7ba92b0740a3f4f3887c39e3b818e1c5642609dc465c1251'), 'address': '0x5FbDB2315678afecb367f032d93F642f64180aa3', 'blockHash': HexBytes('0x9d4692d781880c8e44aa7de1589c3163262daa59841165fe211274d991da8fd5'), 'blockNumber': 7})\n",
+      "unit address: 0x70997970C51812dc3A010C7d01b50e0d17dc79C8\n",
+      "employee address: 0x15d34AAf54267DB7D7c367839AAf71A00a2C6A65\n",
+      "\n",
+      "Event:  AttributeDict({'args': AttributeDict({'unitAddress': '0x70997970C51812dc3A010C7d01b50e0d17dc79C8', 'employeeAddress': '0x9965507D1a55bcC2695C58ba16FB37d819B0A4dc', 'monthlySalary': 30000}), 'event': 'EmployeeAdded', 'logIndex': 0, 'transactionIndex': 0, 'transactionHash': HexBytes('0xfb50c16e2281421e6937e514e1f30f04b5c3804f72a82fee363ba134c43e9b69'), 'address': '0x5FbDB2315678afecb367f032d93F642f64180aa3', 'blockHash': HexBytes('0xbab51b510515e364970fe24fd139b058711acf81f5531ea196145a6c006abeea'), 'blockNumber': 10})\n",
+      "unit address: 0x70997970C51812dc3A010C7d01b50e0d17dc79C8\n",
+      "employee address: 0x9965507D1a55bcC2695C58ba16FB37d819B0A4dc\n",
+      "\n"
      ]
     }
    ],
@@ -378,6 +390,68 @@
     "        print()\n",
     "\n",
     "get_employee(unit_pk1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Account:  <eth_account.signers.local.LocalAccount object at 0x7fac14cb9ff0>\n",
+      "Event:  AttributeDict({'args': AttributeDict({'employeeAddress': '0x90F79bf6EB2c4f870365E785982E1f101E93b906', 'taxAmount': 4120, 'netSalary': 19880}), 'event': 'TaxCalculated', 'logIndex': 2, 'transactionIndex': 0, 'transactionHash': HexBytes('0x23ac152c78b103a9db449ba9b9bd823b5490557fe9daf2e3a116a27a7b61ab59'), 'address': '0x5FbDB2315678afecb367f032d93F642f64180aa3', 'blockHash': HexBytes('0x6cabbf417936342e530bdc24d2cd535be8802571f5a88640f3ac353d3409e0d1'), 'blockNumber': 13})\n",
+      "employee address: 0x90F79bf6EB2c4f870365E785982E1f101E93b906\n",
+      "taxAmount: 4120\n",
+      "netSalary: 19880\n",
+      "\n",
+      "Event:  AttributeDict({'args': AttributeDict({'employeeAddress': '0x90F79bf6EB2c4f870365E785982E1f101E93b906', 'taxAmount': 4120, 'netSalary': 19880}), 'event': 'TaxCalculated', 'logIndex': 2, 'transactionIndex': 0, 'transactionHash': HexBytes('0x8cac8e4b86448a5dcee925c7f45682e1a99b28a2b7b4ccfbe7bfb48723907d6a'), 'address': '0x5FbDB2315678afecb367f032d93F642f64180aa3', 'blockHash': HexBytes('0xb1425d61ed6a79aca4f26bbf56ef5704b03fa638810b6afcb9bb5c56c604a9e8'), 'blockNumber': 33})\n",
+      "employee address: 0x90F79bf6EB2c4f870365E785982E1f101E93b906\n",
+      "taxAmount: 4120\n",
+      "netSalary: 19880\n",
+      "\n",
+      "Event:  AttributeDict({'args': AttributeDict({'employeeAddress': '0x90F79bf6EB2c4f870365E785982E1f101E93b906', 'taxAmount': 4120, 'netSalary': 19880}), 'event': 'TaxCalculated', 'logIndex': 2, 'transactionIndex': 0, 'transactionHash': HexBytes('0xee62134e27c5ebe7371b23ec16d8ab4b5129100031836963552267853a8ea7ee'), 'address': '0x5FbDB2315678afecb367f032d93F642f64180aa3', 'blockHash': HexBytes('0x3c253cec6353b36db048d9cf0d4a18e51fdef15c081e746c1a32b77d859ec0e7'), 'blockNumber': 37})\n",
+      "employee address: 0x90F79bf6EB2c4f870365E785982E1f101E93b906\n",
+      "taxAmount: 4120\n",
+      "netSalary: 19880\n",
+      "\n",
+      "Event:  AttributeDict({'args': AttributeDict({'employeeAddress': '0x90F79bf6EB2c4f870365E785982E1f101E93b906', 'taxAmount': 4120, 'netSalary': 19880}), 'event': 'TaxCalculated', 'logIndex': 2, 'transactionIndex': 0, 'transactionHash': HexBytes('0xa238ad06075fd0772b396075980cc146e1f091f3c8ba91253790775a253adab9'), 'address': '0x5FbDB2315678afecb367f032d93F642f64180aa3', 'blockHash': HexBytes('0xa06d0d008f1d2c6ed5e8c04c43036c8f172b4b67abfd72cda3b1d7a19abdc653'), 'blockNumber': 41})\n",
+      "employee address: 0x90F79bf6EB2c4f870365E785982E1f101E93b906\n",
+      "taxAmount: 4120\n",
+      "netSalary: 19880\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_salary(private_key):\n",
+    "    # 获取账户\n",
+    "    account =  web3.eth.account.from_key(private_key)\n",
+    "    print(\"Account: \", account)\n",
+    "\n",
+    "    # 获取最新区块\n",
+    "    latest_block = web3.eth.block_number\n",
+    "\n",
+    "    # 定义事件过滤器，假设事件名为TaxCalculated\n",
+    "    event_filter = contract.events.TaxCalculated.create_filter(\n",
+    "        fromBlock=0,  # 可调整为特定区块范围\n",
+    "        toBlock=latest_block,\n",
+    "        argument_filters={'employeeAddress': account.address}\n",
+    "    )\n",
+    "\n",
+    "    # 获取事件日志\n",
+    "    events = event_filter.get_all_entries()\n",
+    "\n",
+    "    for event in events:\n",
+    "        print(\"Event: \", event)\n",
+    "        print(\"employee address:\", event['args']['employeeAddress'])\n",
+    "        print(\"taxAmount:\", event['args']['taxAmount'])\n",
+    "        print(\"netSalary:\", event['args']['netSalary'])\n",
+    "        print()\n",
+    "\n",
+    "get_salary(employee_pk1)"
    ]
   },
   {
